// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component renders correctly with showCheckmark as false 1`] = `
<Styled(BodyCopy)
  className="sample-badge"
  color="text.primary"
  component="div"
  fontFamily="secondary"
  fontSize="fs10"
  fontWeight="extrabold"
  letterSpacing="normal"
  lineHeight="normal"
  textAlign="left"
>
  <span
    className="badge__content"
  >
    Shipping
  </span>
</Styled(BodyCopy)>
`;

exports[`Badge component renders correctly with showCheckmark as true 1`] = `
<Styled(BodyCopy)
  className="sample-badge"
  color="text.primary"
  component="div"
  fontFamily="secondary"
  fontSize="fs10"
  fontWeight="extrabold"
  letterSpacing="normal"
  lineHeight="normal"
  textAlign="left"
>
  <span
    className="badge__checkmark"
  />
  <span
    className="badge__content"
  >
    Shipping
  </span>
</Styled(BodyCopy)>
`;
